[package]
name = "gmaps-static"
version = "0.1.0"
authors = ["Luciano Mammino"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
ring = "0.16.20"
url="2.2.2"

[dev-dependencies]
querystring = "1.1.0"
